# bookmanagement

./: .gitignore  设计报告.md  设计文档.docx
BookManagement  SQL版本2022/: BookManagement.slnx
BookManagement  SQL版本2022/BookManagement/: BookManagement.csproj  Program.cs
BookManagement  SQL版本2022/BookManagement/BLL(业务逻辑层）/Admin/: FmAdminChangePwd.Designer.cs  FmAdminChangePwd.cs  FmBookBorrow.Designer.cs  FmBookBorrow.cs  FmBookManager.Designer.cs  FmBookManager.cs  FmBookReturn.Designer.cs  FmBookReturn.cs  FmBookTypeManager.Designer.cs  FmBookTypeManager.cs  FmBorrowRecordQuery.Designer.cs  FmBorrowRecordQuery.cs  FmInLibraryBookQuery.Designer.cs  FmInLibraryBookQuery.cs  FmUserManager.Designer.cs  FmUserManager.cs  FmUserTypeManage.Designer.cs  FmUserTypeManage.cs
BookManagement  SQL版本2022/BookManagement/DAL（数据访问层）/: SqlHelper.cs
BookManagement  SQL版本2022/BookManagement/Properties/: AssemblyInfo.cs
BookManagement  SQL版本2022/BookManagement/UI(表现层）/: FmAdmin.Designer.cs  FmAdmin.cs  FmLog.Designer.cs  FmLog.cs  FmUser.Designer.cs  FmUser.cs
refactored/: .env.example  README.md  pyproject.toml
refactored/deploy/: Dockerfile  docker-compose.yml
refactored/deploy/nginx/: nginx.conf
refactored/deploy/postgres/: init.sql
refactored/docs/: 00_项目总览.md  01_技术规格书总纲.md  02_数据模型设计.md  03_API接口设计规范.md  04_后端架构设计.md  05_前端路由与页面.md  06_状态机业务流程.md  07_权限设计.md  08_并发安全设计.md  09_部署与运维规范.md  10_测试计划.md  11_迭代交付规划.md  12_工程化规范.md
refactored/docs/plan/: 2024-05-10-backend-implementation-plan.md
refactored/web/src/: App.vue
(+2 files in other folders)
